--- a/src/main/webapp/emr/reports/index.xhtml
+++ b/src/main/webapp/emr/reports/index.xhtml
@@ -19,7 +19,7 @@
                                 <div class="col-md-3" >
                                     <h:form >
                                         <p:accordionPanel widgetVar="basic"  
-                                                          activeIndex="#{emrController.activeIndex}" 
+                                                          activeIndex="#{emrController.activeIndexOfReports}" 
                                                           >
                                             <p:tab title="Clinical">
                                                 <div class="d-grid gap-2">
