--- a/src/main/webapp/emr/admin/index.xhtml
+++ b/src/main/webapp/emr/admin/index.xhtml
@@ -33,6 +33,12 @@
                                                     <p:commandButton styleClass="btn btn-block" ajax="false" value="Treatements" action="/clinical/clinical_treatment" onclick="onSubmitButton();" ></p:commandButton>
                                                 </div>
                                             </p:tab>
+                                            <p:tab title="Clinical Metadata">
+                                                <div class="d-grid gap-2">
+                                                    <p:commandButton styleClass="btn btn-block" ajax="false" value="Add Unit" action="#{measurementUnitController.navigateToAddMeasurementUnit()}" onclick="onSubmitButton();" ></p:commandButton>
+                                                    <p:commandButton styleClass="btn btn-block" ajax="false" value="List Units" action="#{measurementUnitController.navigateToListAllMeasurementUnit()}" onclick="onSubmitButton();" ></p:commandButton>
+                                                </div>
+                                            </p:tab>
                                             <p:tab title="Clinical Metadata - Bulkd Upload">
                                                 <div class="d-grid gap-2">
                                                     <p:commandButton styleClass="btn btn-block" ajax="false" value="Diagnosis" action="#{dataUploadBean.navigateToUploadDiagnoses()}"  ></p:commandButton>
