--- a/src/main/webapp/emr/patient_search.xhtml
+++ b/src/main/webapp/emr/patient_search.xhtml
@@ -99,9 +99,12 @@
                                             <p:outputLabel rendered="#{not empty p.person.phone and p.person.phone ne ''}" value=",&nbsp; "></p:outputLabel>
                                             <p:outputLabel value="#{p.person.address}"></p:outputLabel>
                                         </p:column>
-                                        <p:column headerText="Actions"  width="200">
+                                        <p:column headerText="Actions"  width="600">
                                             <div class="d-flex justify-content-between">
                                                 <p:commandButton value="EMR" action="#{patientController.toEmrPatientProfile()}" ajax="false">
+                                                    <f:setPropertyActionListener value="#{p}" target="#{patientController.current}"></f:setPropertyActionListener>
+                                                </p:commandButton>
+                                                 <p:commandButton value="OPD Visit" action="#{patientController.navigateToNewOpdVisitFromSearch}" ajax="false">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}"></f:setPropertyActionListener>
                                                 </p:commandButton>
                                                 <p:commandButton value="Billing" action="#{patientController.toEmrPatientProfile()}" ajax="false">
