Signed-off-by: buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/reportInstitution/all_bills.xhtml
+++ b/src/main/webapp/reportInstitution/all_bills.xhtml
@@ -23,11 +23,11 @@
                         <p:calendar styleClass="dateTimePicker" 
                                     id="fromDate" 
                                     value="#{searchController.fromDate}" 
-                                    navigator="false" pattern="dd MMMM yyyy" >      
+                                    navigator="false" pattern="dd MMMM yyyy hh:mm" >      
                         </p:calendar>
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{searchController.toDate}" 
-                                    navigator="false" pattern="dd MMMM yyyy" >                                                                              
+                                    navigator="false" pattern="dd MMMM yyyy hh:mm" >                                                                              
                         </p:calendar>
                         <p:commandButton id="btnSearch" ajax="false" value="Search" 
                                          action="#{searchController.fillAllBills}"/>
