--- a/src/main/webapp/resources/ezcomp/emr/emr_summery.xhtml
+++ b/src/main/webapp/resources/ezcomp/emr/emr_summery.xhtml
@@ -29,30 +29,48 @@
                                        rendered="#{patientEncounterController.encounters ne null and not empty patientEncounterController.encounters}">
                             <f:convertDateTime pattern="dd MMMM yyyy" ></f:convertDateTime>
                         </p:outputLabel>
-
                     </h:panelGroup>
 
-                    <p:outputLabel value="Allergies" ></p:outputLabel>
-                    <ui:repeat value="#{patientEncounterController.patientAllergies}" var="allergy">
-                        <h:outputText value="#{allergy.itemValue.name}" />
-                        <h:outputText value="#{not loop.last ? ', ' : ''}"/>
-                    </ui:repeat>
+                    <p:outputLabel value="Allergies" />
+                    <h:panelGroup rendered="#{patientEncounterController.patientAllergies != null and not empty patientEncounterController.patientAllergies}">
+                        <ui:repeat value="#{patientEncounterController.patientAllergies}" var="allergy">
+                            <h:outputText value="#{allergy.itemValue.name}" styleClass="ui-messages-error" />
+                            <h:outputText value="#{not loop.last ? ', ' : ''}" styleClass="ui-messages-error"/>
+                        </ui:repeat>
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{patientEncounterController.patientAllergies == null or empty patientEncounterController.patientAllergies}">
+                        <p:outputLabel value="No Allergies" styleClass="ui-messages-success" />
+                    </h:panelGroup>
 
-                    <p:outputLabel value="Disease Conditions" ></p:outputLabel>
-                    <ui:repeat value="#{patientEncounterController.patientDiagnoses}" var="dx">
-                        <h:outputText value="#{dx.itemValue.name}" />
-                        <ui:fragment rendered="#{not status.last}">
-                            <span>, </span>
-                        </ui:fragment>
-                    </ui:repeat>
 
-                    <p:outputLabel value="Medicines" ></p:outputLabel>
-                    <ui:repeat value="#{patientEncounterController.patientMedicines}" var="rx">
-                        <h:outputText value="#{rx.prescription.item.name}" />
-                        <ui:fragment rendered="#{not loop.last}">
-                            <span>, </span>
-                        </ui:fragment>
-                    </ui:repeat>
+
+
+                    <p:outputLabel value="Disease Conditions" />
+                    <h:panelGroup rendered="#{patientEncounterController.patientDiagnoses != null and not empty patientEncounterController.patientDiagnoses}">
+                        <ui:repeat value="#{patientEncounterController.patientDiagnoses}" var="dx">
+                            <h:outputText value="#{dx.itemValue.name}" styleClass="ui-messages-warning" />
+                            <ui:fragment rendered="#{not status.last}">
+                                <span>, </span>
+                            </ui:fragment>
+                        </ui:repeat>
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{patientEncounterController.patientDiagnoses == null or empty patientEncounterController.patientDiagnoses}">
+                        <p:outputLabel value="No Disease Conditions" styleClass="ui-messages-success" />
+                    </h:panelGroup>
+
+                    <p:outputLabel value="Medicines" />
+                    <h:panelGroup rendered="#{patientEncounterController.patientMedicines != null and not empty patientEncounterController.patientMedicines}">
+                        <ui:repeat value="#{patientEncounterController.patientMedicines}" var="rx">
+                            <h:outputText value="#{rx.prescription.item.name}" styleClass="ui-messages-warning" />
+                            <ui:fragment rendered="#{not loop.last}">
+                                <span>, </span>
+                            </ui:fragment>
+                        </ui:repeat>
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{patientEncounterController.patientMedicines == null or empty patientEncounterController.patientMedicines}">
+                        <p:outputLabel value="No Medicines" styleClass="ui-messages-success" />
+                    </h:panelGroup>
+
 
 
                 </p:panelGrid>
